--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -31,6 +31,9 @@ jobs:
 
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
+      
+    - name: Run PHPUnit tests
+      run: vendor/bin/phpunit
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
