--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -17,8 +17,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Validate composer.json and composer.lock
-      run: composer validate --strict
+    - name: Validate composer.lock
+      run: composer validate --strict --no-check-all --check-lock
 
     - name: Cache Composer packages
       id: composer-cache
@@ -34,9 +34,3 @@ jobs:
       
     - name: Run PHPUnit tests
       run: vendor/bin/phpunit
-
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
-
-    # - name: Run test suite
-    #   run: composer run-script test
