--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-     "name": "acme/awesome-package",
-    "description": "A ",
+    "name": "acme/awesome-package",
+    "description": "Une brève description de votre package",
     "type": "library",
     "license": "proprietary",
     "require": {
@@ -11,7 +11,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "model/function.php"
+            "App\\": "model/"
         }
     }
 }
